<resources>
    <string name="app_name">ToDoList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Điều hướng nhanh</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_today">Công việc hôm nay</string>
    <string name="menu_this_week">Công việc tuần này</string>
    <string name="menu_scheduled">Đã lên kế hoạch</string>
    <string name="menu_not_scheduled">Chưa lên kế hoạch</string>
    <string name="menu_completed">Đã hoàn thành</string>
    <string name="menu_projects">Danh sách dự án</string>

    <string name="login_header">LOGIN</string>
    <string name="email_edit_text">Email</string>
    <string name="password_edit_text">Password</string>
    <string name="login_button">Login</string>
    <string name="login_google_button">Login with existing Google email</string>
    <string name="signup_text">Sign up with your email</string>

    <string name="signup_header">SIGN UP</string>
    <string name="username_edit_text">Username</string>

</resources>