<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_today">

    <fragment
        android:id="@+id/nav_today"
        android:name="com.goodsoft.todolist.ui.today.TodayFragment"
        android:label="@string/menu_today"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/nav_this_week"
        android:name="com.goodsoft.todolist.ui.thisweek.ThisWeekFragment"
        android:label="@string/menu_this_week"
        tools:layout="@layout/fragment_this_week" />

    <fragment
        android:id="@+id/nav_scheduled"
        android:name="com.goodsoft.todolist.ui.scheduled.ScheduledFragment"
        android:label="@string/menu_scheduled"
        tools:layout="@layout/fragment_scheduled" />

    <fragment
        android:id="@+id/nav_not_scheduled"
        android:name="com.goodsoft.todolist.ui.scheduled.ScheduledFragment"
        android:label="@string/menu_not_scheduled"
        tools:layout="@layout/fragment_scheduled"
        />
</navigation>